2004/11/29 21:43 (+0100) kaffeetisch

	* Makefile.PL: Correct the unstable warning message to say 1.06x
	instead of 1.04x.

	* Gtk2.pm, META.yml, NEWS, README: Unstable release 1.071.

2004/11/29 21:01 (+0100) kaffeetisch

	* xs/GtkAboutDialog.xs: Various const-ness fixes.

	* t/GtkAccelGroup.t, xs/GtkAccelGroup.xs: Bind and test
	gtk_accelerator_get_label.

	* t/GtkButton.t, xs/GtkButton.xs: Bind and test
	gtk_button_set_image, gtk_button_get_image.

	* t/GtkDialog.t, xs/GtkDialog.xs: Bind and test
	gtk_dialog_set_alternative_button_order.

	* t/GtkEntry.t, xs/GtkEntry.xs: Bind and test
	gtk_entry_layout_index_to_text_index,
	gtk_entry_text_index_to_layout_index.

	* t/GtkFileChooser.t, xs/GtkFileChooser.xs: Bind and test
	gtk_file_chooser_set_show_hidden,
	gtk_file_chooser_get_show_hidden.

	* t/GtkFileFilter.t, xs/GtkFileFilter.xs: Bind and test
	gtk_file_filter_add_pixbuf_formats.

	* t/GtkImage.t, xs/GtkImage.xs: Bind and test
	gtk_image_new_from_icon_name, gtk_image_set_from_icon_name,
	gtk_image_get_icon_name, gtk_image_set_pixel_size,
	gtk_image_get_pixel_size.

2004/11/01 21:38 (+0100) kaffeetisch

	* Makefile.PL: Depend on Glib 1.070.

	* MANIFEST: Add maps_pango-1.4.

	* Gtk2.pm, META.yml, Makefile.PL, NEWS, README: Unstable release
	1.070.

2004/10/25 20:26 (+0200) kaffeetisch

	* maps_pango-1.5, maps_pango-1.6: Rename the maps file.

	* t/Gdk.t: Account for the new grab result "not-viewable".

	* t/GtkIconView.t: Add a "FIXME: 2.6" comment.

	* t/GtkListStore.t: Reenable this test since the bug that caused
	the issues has been fixed.

	* t/GtkAboutDialog.t, xs/GtkAboutDialog.xs: Bind and test
	gtk_about_dialog_get_logo_icon_name,
	gtk_about_dialog_set_logo_icon_name,
	gtk_about_dialog_set_email_hook, gtk_about_dialog_set_url_hook.
	Add some parameter descriptions.

	* t/GtkCellView.t, xs/GtkCellView.xs: Bind and test
	gtk_cell_view_set_value, gtk_cell_view_set_values,
	gtk_cell_view_get_size_of_row.
